Bug 1707138 - Don't send session store updates after we start process switching, r=farre

Differential Revision: https://phabricator.services.mozilla.com/D115015